[package]
name = "advent2021"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
lazy_static = "1.4"

[[bin]]
name = "day01"
path = "src/day01/main.rs"

[[bin]]
name = "day02"
path = "src/day02/main.rs"

[[bin]]
name = "day03"
path = "src/day03/main.rs"

[[bin]]
name = "day04"
path = "src/day04/main.rs"
